# mcp-coding-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run.yml
src/coding_agent/: client.py  server.py  server_for_cursor.py
tests/: test_client.py
